--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
     <div class="conti">
     <p>¿como tu donancion los ayuda</p></div>
     </main>
+        <div class="grid-menu">
+      <div class="card">
+        <h3>Comidas </h3>
+        <p>Repartir comida a los lugares mas necesitados</p>
+      </div>
+
+      <div class="card">
+        <h3>Ropa y abrigos</h3>
+        <p>Comprar ropa,abrigos y colchas para repartir a los mas necestiados y </p>
+    
+      </div>
+      <div class="card">
+        <h3>juguestes</h3>
+        <p>repartir juguetes a todos los niños que no tienen </p>
+    
+      </div>
+    </div>
     <script src="logica de caridad.js"></script>
 </body>
 </html>
